# fava-query

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: main.rs
